# ChangeLog for sys-apps/usbutils
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/usbutils/ChangeLog,v 1.99 2010/04/25 18:02:09 aballier Exp $

  25 Apr 2010; Alexis Ballier <aballier@gentoo.org> usbutils-0.87.ebuild,
  +files/usbutils-0.87-fbsd.patch:
  Fix build on FreeBSD, bug #316671, by Toffanin [Gentoo/FreeBSD AT]
  <toffanin.mauro@gmail.com>

*usbutils-0.87 (21 Mar 2010)

  21 Mar 2010; Mike Frysinger <vapier@gentoo.org> +usbutils-0.87.ebuild:
  Version bump #310577 by Samuli Suominen.

  30 Jan 2010; Raúl Porcel <armin76@gentoo.org> usbutils-0.86-r1.ebuild:
  sparc stable wrt #296426

  18 Jan 2010; Mike Frysinger <vapier@gentoo.org> usbutils-0.86-r1.ebuild:
  Only install update-usbids and not also update-usbids.sh.

  01 Jan 2010; Tobias Klausmann <klausman@gentoo.org>
  usbutils-0.86-r1.ebuild:
  Stable on alpha, bug #296426

  28 Dec 2009; Markus Meier <maekke@gentoo.org> usbutils-0.86-r1.ebuild:
  x86 stable, bug #296426

  28 Dec 2009; nixnut <nixnut@gentoo.org> usbutils-0.86-r1.ebuild:
  ppc stable #296426

  18 Dec 2009; Mike Frysinger <vapier@gentoo.org> usbutils-0.86-r1.ebuild:
  Add pkgconfig to build deps #297346 by Johannes Niess.

  16 Dec 2009; Jeroen Roovers <jer@gentoo.org> usbutils-0.86-r1.ebuild:
  Stable for HPPA (bug #296426).

  14 Dec 2009; Brent Baude <ranger@gentoo.org> usbutils-0.86-r1.ebuild:
  stable ppc64, bug 296426

  12 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  usbutils-0.86-r1.ebuild:
  amd64 stable wrt #296426

  11 Dec 2009; Raúl Porcel <armin76@gentoo.org> usbutils-0.82.ebuild:
  m68k/s390/sh stable

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org> usbutils-0.82.ebuild:
  ia64/sparc stable wrt #287380

  31 Oct 2009; Brent Baude <ranger@gentoo.org> usbutils-0.82.ebuild:
  Marking usbutils-0.82 ppc64 for bug 287745

  30 Oct 2009; Markus Meier <maekke@gentoo.org> usbutils-0.82.ebuild:
  arm/x86 stable, bug #287745
